--- a/css/main.css
+++ b/css/main.css
@@ -13,4 +13,104 @@ a {
 
 body {
   font-family: "Inter", Arial, sans-serif;
+}
+
+.header {
+  position: fixed;
+  width: 100%;
+}
+
+.navbar {
+  height: 60 px;
+  background-color: rgb(139, 165, 139);
+  display: flex;
+  align-items: center;
+  position: relative;
+  justify-content: space-between;
+}
+.navbar__logo {
+  height: 150px;
+}
+.navbar__menu-label {
+  color: rgb(236, 227, 227);
+  margin-left: auto;
+  height: 100%;
+  width: 44px;
+  margin-right: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.navbar__menu-btn {
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  opacity: 0;
+}
+.navbar__menu-btn:checked ~ .navbar__nav-links-container {
+  height: calc(100vh - 150px);
+}
+.navbar__menu-icon {
+  height: 3px;
+  background-color: rgb(236, 227, 227);
+  width: 18px;
+  position: relative;
+}
+.navbar__menu-icon::after, .navbar__menu-icon::before {
+  content: "";
+  height: 3px;
+  background-color: rgb(236, 227, 227);
+  position: absolute;
+  width: 100%;
+  transition: all 0.2s ease-out;
+}
+.navbar__menu-icon::after {
+  top: 5px;
+}
+.navbar__menu-icon::before {
+  top: -5px;
+}
+.navbar__menu-btn:checked ~ .navbar__menu-label .navbar__menu-icon {
+  background: transparent;
+}
+.navbar__menu-btn:checked ~ .navbar__menu-label .navbar__menu-icon::after {
+  transform: rotate(45deg);
+  top: 0;
+}
+.navbar__menu-btn:checked ~ .navbar__menu-label .navbar__menu-icon::before {
+  transform: rotate(-45deg);
+  top: 0;
+}
+.navbar__nav-links-container {
+  list-style: none;
+  position: absolute;
+  top: 150px;
+  background-color: rgb(85, 97, 85);
+  width: 100%;
+  height: 0;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.navbar__nav-item {
+  padding: 0.75rem 1rem;
+  color: rgb(236, 227, 227);
+  font-size: 18px;
+}
+.navbar__nav-item:not(:last-child) {
+  border-bottom: 1px solid rgb(139, 165, 139);
+}
+
+@media screen and (min-width: 600px) {
+  .navbar__menu-label, .navbar__menu-btn {
+    display: none;
+  }
+  .navbar__nav-links-container {
+    position: static;
+    flex-direction: row;
+    height: 45px;
+  }
 }/*# sourceMappingURL=main.css.map */
