footer responsive direccion de columnas ok

--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@
 
 a {
   text-decoration: none;
+  display: inline-block;
 }
 
 body {
@@ -112,5 +113,36 @@ body {
     position: static;
     flex-direction: row;
     height: 45px;
+  }
+}
+.footer {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(85, 97, 85);
+}
+.footer__column {
+  padding: 1rem 1.5rem;
+}
+.footer__contact-item {
+  list-style: none;
+}
+.footer__contact-link {
+  color: white;
+  padding: 0.25rem;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  display: inline-block;
+}
+.footer .footer__contact-icon {
+  font-size: 1.5rem;
+}
+.footer .footer__contact-icon--facebook {
+  color: #38529a;
+}
+
+@media screen and (min-width: 600px) {
+  .footer {
+    flex-direction: row;
   }
 }/*# sourceMappingURL=main.css.map */
