--- a/css/main.css
+++ b/css/main.css
@@ -140,6 +140,12 @@ body {
 .footer .footer__contact-icon--facebook {
   color: #38529a;
 }
+.footer .footer__contact-icon--instagram {
+  color: #f14d59;
+}
+.footer .footer__contact-icon--linkedin {
+  color: #0077b6;
+}
 
 @media screen and (min-width: 600px) {
   .footer {
