--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,16 +10,19 @@
 @import 'layout/footer';
 @import 'layout/sidebar';
 @import 'layout/forms';
+@import 'layout/main';
 
 @import 'components/buttons';
 @import 'components/carousel';
 @import 'components/cover';
 @import 'components/dropdown';
+@import 'components/card';
 
 @import 'pages/home';
 @import 'pages/contact';
 
 @import 'themes/theme';
 @import 'themes/admin';
+
 
 
