--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,7 +1,27 @@
 .header{
     position: fixed;
     width: 100%;
+    top: 0;
 }
+
+.user-navbar{
+    margin-left: auto;
+    display: flex;
+    gap:.5rem;
+    color:$color-font-ligth;
+    align-items: center;
+    padding: 0 1rem;
+
+    &__user-avatar{
+        width: 50px;
+    }
+    &__cart-icon-container{
+        color: $color-font-ligth;
+        font-size: 2rem;
+    }
+}
+
+
 
 
 .navbar{
@@ -18,7 +38,7 @@
 
     &__menu-label{
         color:$color-font-ligth;
-        margin-left: auto;
+        /* margin-left: auto; */
         height: 100%;
         width: 44px;
         margin-right: 4px;
@@ -113,5 +133,8 @@
             flex-direction: row;
             height: 45px;
         }
+    }
+    .user-navbar{
+        order:3;
     }
 }
