--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,4 +1,6 @@
 $color-bg-primary: rgb(139, 165, 139);
 $color-bg-secondary: rgb(85, 97, 85);
 $color-font-dark: rgb(27, 26, 26);
-$color-font-ligth: rgb(236, 227, 227);
+$color-font-ligth: rgb(236, 227, 227);  
+
+$color-background: rgb(255, 255, 255); 
