--- a/css/main.css
+++ b/css/main.css
@@ -31,11 +31,34 @@ body {
   padding: 0 1rem;
 }
 .user-navbar__user-avatar {
+  padding-right: 10px;
   width: 50px;
 }
 .user-navbar__cart-icon-container {
+  display: flex;
+  padding-right: 15px;
   color: rgb(236, 227, 227);
   font-size: 2rem;
+  text-align: center;
+}
+.user-navbar__user-name {
+  position: fixed;
+  padding: 4px;
+  border-radius: 7px;
+  font-size: 1rem;
+  background-color: rgb(85, 97, 85);
+  top: 6rem;
+  width: 45px;
+  text-align: center;
+}
+.user-navbar__cart-counter {
+  position: fixed;
+  padding: 4px;
+  border-radius: 7px;
+  font-size: 1rem;
+  background-color: rgb(85, 97, 85);
+  top: 6rem;
+  width: 36px;
 }
 
 .navbar {
@@ -48,6 +71,7 @@ body {
 }
 .navbar__logo {
   height: 150px;
+  margin-left: 0rem;
 }
 .navbar__menu-label {
   color: rgb(236, 227, 227);
@@ -104,7 +128,7 @@ body {
   list-style: none;
   position: absolute;
   top: 150px;
-  background-color: rgb(85, 97, 85);
+  background-color: rgb(139, 165, 139);
   width: 100%;
   height: 0;
   overflow: hidden;
@@ -117,9 +141,19 @@ body {
   padding: 0.75rem 1rem;
   color: rgb(236, 227, 227);
   font-size: 18px;
+  border-bottom: 1px solid rgb(85, 97, 85);
+  /* &:not(:last-child){
+      border-bottom: 1px solid $color-bg-secondary;
+  }  */
 }
-.navbar__nav-item:not(:last-child) {
-  border-bottom: 1px solid rgb(139, 165, 139);
+.navbar__nav-link {
+  color: rgb(236, 227, 227);
+}
+.navbar__nav-link:hover {
+  color: rgb(85, 97, 85);
+}
+.navbar__nav-link:active {
+  color: rgb(85, 97, 85);
 }
 
 @media screen and (min-width: 600px) {
@@ -130,6 +164,10 @@ body {
     position: static;
     flex-direction: row;
     height: 45px;
+  }
+  .navbar__logo {
+    height: 150px;
+    margin-left: 3rem;
   }
   .user-navbar {
     order: 3;
@@ -183,11 +221,11 @@ body {
   border: 1px solid rgb(27, 26, 26);
 }
 .card__header {
-  height: 140px;
+  height: 200px;
   background-color: rgb(236, 227, 227);
 }
 .card__img {
-  height: 140px;
+  height: 200px;
 }
 .card__body {
   padding: 1rem;
@@ -201,42 +239,106 @@ body {
   padding: 1rem 0;
 }
 .card__price {
+  text-align: right;
   font-weight: 500;
-  font-size: 1.25rem;
+  font-size: 1.5rem;
   color: rgb(139, 165, 139);
 }
 .card__footer {
   display: flex;
   justify-content: space-between;
+  padding: 0 0 1.5rem 0;
+}
+.card__btn-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.card__btn-cart {
+  color: rgb(236, 227, 227);
+  background-color: rgb(139, 165, 139);
   padding: 1rem;
+  border-radius: 0px 10px 10px 0px;
+}
+.card__date {
+  visibility: hidden;
 }
 .card__btn {
+  color: rgb(236, 227, 227);
   background-color: rgb(139, 165, 139);
-  padding: 1rem 2rem;
+  padding: 1rem;
   border-radius: 10px 0px 0px 10px;
 }
 
+/* $color-bg-primary: rgb(139, 165, 139);
+$color-bg-secondary: rgb(85, 97, 85);
+$color-font-dark: rgb(27, 26, 26);
+$color-font-ligth: rgb(236, 227, 227); */
 .section-cards__header {
   text-transform: uppercase;
   font-size: 2 rem;
   text-align: center;
+  background-color: rgb(255, 255, 255);
 }
 .section-cards__subtitle {
   background-color: rgb(139, 165, 139);
   font-size: 1rem;
+  background-color: rgb(255, 255, 255);
 }
 .section-cards__products-search-container {
-  padding: 1rem;
-  background-color: rgb(85, 97, 85);
+  background-color: red;
+  padding: 2rem;
+  margin-bottom: 1rem;
+}
+
+.product-search__input {
+  border: none;
+  border-radius: 5px 0 0 5px;
+  padding: 0.6rem;
+  width: 50%;
+  color: rgb(27, 26, 26);
+  font-size: 1.2rem;
+  font-weight: 500;
+  margin-right: -2rem;
+  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.3137254902);
+  background-color: blue;
+}
+.product-search__input:focus {
+  outline: none;
+}
+.product-search__input:active {
+  outline: none;
+}
+.product-search__btn {
+  border: none;
+  border-radius: 0 5px 5px 0;
+  padding: 0.6rem;
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+.product-search .fa-magnifying-glass:hover {
+  transition: all 0.2s ease-out;
+  transform: rotate(360deg);
+}
+.product-search__label {
+  color: rgb(27, 26, 26);
 }
 
 .cards-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
-@media screen and (min-width: 1000px) {
-  .section-cards__header {
-    display: flex;
-  }
+.whatsapp-container {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+}
+.whatsapp-container__img {
+  width: 80px;
+  filter: grayscale(90%);
+}
+.whatsapp-container__img:hover {
+  width: 80px;
+  filter: grayscale(20%);
 }/*# sourceMappingURL=main.css.map */
