--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,43 +1,67 @@
- .card {
-    margin: 1rem;
-    border: 1px solid $color-font-dark;
+.card {
+   margin: 1rem;
+   border: 1px solid $color-font-dark;
 
-     &__header{
-        height: 140px;
-        background-color: $color-font-ligth;
-     }
-     &__img{
-        height: 140px;
+   &__header{
+      height: 200px;
+         background-color: $color-font-ligth;
+      }
+   &__img{
+      height: 200px;
+   }
 
-     }
-     &__body{
-        padding: 1rem;
+   &__body{
+      padding: 1rem;
 
-     }
-     &__title{
-        font-weight: 500;
-        font-size: 1.5rem;
-        border-bottom: 2px solid $color-font-dark;
-     }
-     &__description{
-        padding: 1rem 0;
-     }
-     &__price{
-        font-weight: 500;
-        font-size: 1.25rem;
-        color: $color-bg-primary;
-     }
-     &__footer{
-        display: flex;
-        justify-content: space-between;
-        padding: 1rem;
-     }
-     &__btn-container{
-       
-     }
-     &__btn{
-        background-color: $color-bg-primary;
-        padding: 1rem 2rem;
-        border-radius: 10px 0px 0px 10px;
-     }
- }
+   }
+   &__title{
+      font-weight: 500;
+      font-size: 1.5rem;
+      border-bottom: 2px solid $color-font-dark;
+   }
+   &__description{
+      padding: 1rem 0;
+   }
+   &__price{
+      text-align: right;
+      font-weight: 500;
+      font-size: 1.5rem;
+      color: $color-bg-primary;
+   }
+   &__footer{
+      display: flex;
+      justify-content: space-between;
+      padding: 0 0 1.5rem 0 ;
+   }
+   //----------------------
+   &__btn-container{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+   }
+   //----------------------
+   &__btn-cart{
+      color: $color-font-ligth;
+      background-color: $color-bg-primary;
+      padding: 1rem;
+      border-radius: 0px 10px 10px 0px;
+   }
+
+   &__date{
+      visibility: hidden;
+   }
+
+   &__btn{
+      color: $color-font-ligth;
+      background-color: $color-bg-primary;
+      padding: 1rem;
+      border-radius: 10px 0px 0px 10px;
+   }
+
+
+}
+
+/* $color-bg-primary: rgb(139, 165, 139);
+$color-bg-secondary: rgb(85, 97, 85);
+$color-font-dark: rgb(27, 26, 26);
+$color-font-ligth: rgb(236, 227, 227); */
