--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,6 +17,7 @@
 @import 'components/cover';
 @import 'components/dropdown';
 @import 'components/card';
+@import 'components/search';
 
 @import 'pages/home';
 @import 'pages/contact';
