--- a/sass/components/_search.scss
+++ b/sass/components/_search.scss
@@ -3,12 +3,15 @@
         text-transform: uppercase;
         font-size: 2 rem;
         text-align: center;
-        background-color: $color-background;;
+        background-color: $color-background;
     }
     &__subtitle{
         background-color: $color-bg-primary;
         font-size: 1rem;
         background-color:$color-background;
+    }
+    &__products-count{
+        padding: 1rem;
     }
     &__products-search-container{
         text-align: center;
@@ -24,6 +27,7 @@
     display:flex;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
 
     &__input{
         outline: none;
@@ -39,19 +43,18 @@
         padding-left: 2.6rem;
     }
     
-    &__input:not(:placeholder-shown){
+/*     &__input:not(:placeholder-shown){
 
         + button{
             transition:  all .8s ease-in;
             transform: rotate(360deg);
         } 
-    }
+    } */
     
     &__btn{
         border: 1px solid $color-bg-secondary;
         background-color: $color-bg-secondary;
         color: $color-background;
-        margin-left: -.4rem;
         border-radius: 0 20px 20px 0;
         padding: .6rem;
         font-size: 1.2rem;
@@ -84,10 +87,22 @@
     }
 
 
+}
 
+@media screen and (max-width: 600px){
 
+    .product-search{
+        &__input{
+            width: 100%
+        }
+    }
+}
 
+@media screen and (max-width: 650px){
 
-
-
+    .product-search{
+        &__input{
+            width: 90%
+        }
+    }
 }
