cards css, to solve:whish error...

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -4,3 +4,8 @@ $color-font-dark: rgb(27, 26, 26);
 $color-font-ligth: rgb(236, 227, 227);  
 
 $color-background: rgb(255, 255, 255); 
+$color-wish-list-on: rgb(204, 29, 29); 
+$color-wish-list-off: rgb(199, 194, 194); 
+
+$shadow0: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+$shadow1: rgba(0, 0, 0, 0.35) 0px 5px 5px;
