--- a/css/main.css
+++ b/css/main.css
@@ -218,14 +218,36 @@ body {
 
 .card {
   margin: 1rem;
-  border: 1px solid rgb(27, 26, 26);
+  border: 0px solid rgb(27, 26, 26);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 5px 5px 0 0;
+  overflow: hidden;
 }
 .card__header {
   height: 200px;
   background-color: rgb(236, 227, 227);
+  border-radius: 5px 5px 0 0;
+}
+.card__heart {
+  position: relative;
+}
+.card__heart i {
+  position: absolute;
+  right: 0;
+  padding: 1rem;
+  font-size: 1.8rem;
+  text-shadow: rgba(0, 0, 0, 0.35) 0px 5px 5px;
 }
 .card__img {
-  height: 200px;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.card__img:hover {
+  transform: rotate(-3deg) scale(1.2);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  transition: all 0.3s ease-out;
 }
 .card__body {
   padding: 1rem;
@@ -270,6 +292,14 @@ body {
   border-radius: 10px 0px 0px 10px;
 }
 
+.whish-list-on {
+  color: rgb(204, 29, 29);
+}
+
+.whish-list-off {
+  color: rgb(199, 194, 194);
+}
+
 /* $color-bg-primary: rgb(139, 165, 139);
 $color-bg-secondary: rgb(85, 97, 85);
 $color-font-dark: rgb(27, 26, 26);
@@ -289,8 +319,9 @@ $color-font-ligth: rgb(236, 227, 227); */
 }
 
 .cards-container {
+  justify-content: center;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
 }
 
 @media screen and (min-width: 1000px) {
