--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,14 +1,41 @@
 .card {
    margin: 1rem;
-   border: 1px solid $color-font-dark;
+   border: 0px solid $color-font-dark;
+   box-shadow: $shadow0;
+   border-radius: 5px 5px 0 0;
+   overflow:hidden;
+   
 
    &__header{
-      height: 200px;
+         height: 200px;
          background-color: $color-font-ligth;
+         border-radius: 5px 5px 0 0;
       }
+      &__heart{
+         position:relative;
+         i {
+            position:absolute;
+            right: 0;
+            padding: 1rem;
+            font-size: 1.8rem;
+            text-shadow: $shadow1;
+         }
+         }
+
    &__img{
-      height: 200px;
+      width: 100%;
+      height: 100%;
+      object-fit: cover
    }
+
+   &__img:hover{
+
+      transform: rotate(-3deg) scale(1.2);
+      box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+      transition: all 0.3s ease-out;
+
+   }
+
 
    &__body{
       padding: 1rem;
@@ -57,8 +84,14 @@
       padding: 1rem;
       border-radius: 10px 0px 0px 10px;
    }
+}
 
+.whish-list-on{
+   color: $color-wish-list-on;
+}
 
+.whish-list-off{
+   color: $color-wish-list-off;
 }
 
 /* $color-bg-primary: rgb(139, 165, 139);
