--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -15,8 +15,9 @@
 }
 
 .cards-container{
+    justify-content: center;
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr))
 }
 
 
