--- a/css/main.css
+++ b/css/main.css
@@ -17,9 +17,11 @@ body {
 }
 
 .header {
-  position: fixed;
+  position: -webkit-sticky;
+  position: sticky;
   width: 100%;
   top: 0;
+  z-index: 2;
 }
 
 .user-navbar {
@@ -296,13 +298,6 @@ body {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  /*     &__input:not(:placeholder-shown){
-
-          + button{
-              transition:  all .8s ease-in;
-              transform: rotate(360deg);
-          } 
-      } */
   /* ANIMACION LUPA */
 }
 .product-search__input {
@@ -317,6 +312,20 @@ body {
   box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.3137254902);
   background-color: rgb(255, 255, 255);
   padding-left: 2.6rem;
+}
+.product-search__input:not(:-moz-placeholder-shown) + button {
+  -moz-transition: all 0.8s ease-in;
+  transition: all 0.8s ease-in;
+  transform: rotate(360deg);
+}
+.product-search__input:not(:-ms-input-placeholder) + button {
+  -ms-transition: all 0.8s ease-in;
+  transition: all 0.8s ease-in;
+  transform: rotate(360deg);
+}
+.product-search__input:not(:placeholder-shown) + button {
+  transition: all 0.8s ease-in;
+  transform: rotate(360deg);
 }
 .product-search__btn {
   border: 1px solid rgb(85, 97, 85);
@@ -339,7 +348,7 @@ body {
   font-size: 1.2rem;
   font-weight: 500;
   margin-right: -2.6rem;
-  z-index: 2;
+  z-index: 1;
 }
 .product-search .product-search__icon:hover {
   transition: all 0.8s ease-out;
