--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -17,9 +17,23 @@
 .cards-container{
     justify-content: center;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr))
-}
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+} 
 
+.whatsapp-container{
+    position: fixed;
+    bottom: 20px;
+    right:20px;
+    &__img{
+        width: 80px;
+        filter: grayscale(90%);
+    }
+    &__img:hover{
+        width: 80px;
+        filter: grayscale(20%);
+    }
+
+}
 
 @media screen and (min-width:1000px){
     .section-cards{
@@ -29,3 +43,4 @@
         }
     }
 }
+
