--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,3 +1,8 @@
+html
+{
+  scroll-behavior: smooth;
+}
+
 .cards-container{
     justify-content: center;
     display: grid;
@@ -7,7 +12,8 @@
 .whatsapp-container{
     position: fixed;
     bottom: 20px;
-    right:20px;
+    left:20px;
+    z-index: 10;
     &__img{
         width: 80px;
         filter: grayscale(90%);
@@ -16,6 +22,20 @@
         width: 80px;
         filter: grayscale(20%);
     }
-
 }
 
+.swipe-up{
+    position: fixed;
+    bottom: 20px;
+    right:20px;
+    z-index: 10;
+    transition:opacity .17s ease;
+    &__img{
+        width: 60px;
+        filter: grayscale(90%);
+    }
+    &__img:hover{
+        width: 60px;
+        filter: grayscale(20%);
+    }
+}
