--- a/css/main.css
+++ b/css/main.css
@@ -463,4 +463,53 @@ html {
 .swipe-up__img:hover {
   width: 60px;
   filter: grayscale(20%);
+}
+
+section {
+  width: 50%;
+  overflow: hidden;
+}
+
+.main-contact {
+  display: flex;
+  flex-direction: row;
+}
+
+.map-container {
+  width: 100%;
+}
+
+.form-container {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.contact-form {
+  background-color: rgb(139, 165, 139);
+  padding: 4rem;
+  width: 95%;
+}
+.contact-form__item {
+  padding: 0.2rem;
+}
+
+.field-container__label {
+  padding: 0.5rem;
+}
+.field-container__input {
+  border-radius: 5px;
+  border: none;
+  padding: 0.5rem;
+  width: 100%;
+}
+.field-container__input:focus {
+  border: none;
+  outline: 2px ridge rgb(139, 165, 139);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+.field-container textarea {
+  height: 6rem;
 }/*# sourceMappingURL=main.css.map */
