--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,7 +1,16 @@
+/* $color-bg-primary: rgb(89, 158, 104);
+$color-bg-secondary: rgb(98, 185, 57);
+$color-bg-date: rgb(89, 158, 104); */
+
+
 $color-bg-primary: rgb(139, 165, 139);
 $color-bg-secondary: rgb(85, 97, 85);
+$color-bg-date: rgb(139, 165, 139);
+
+
 $color-font-dark: rgb(27, 26, 26);
 $color-font-ligth: rgb(236, 227, 227);  
+$color-font-ligth2: rgba(143, 138, 138, 0.637);  
 
 $color-background: rgb(255, 255, 255); 
 
