--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -1,5 +1,5 @@
 .main{
-    margin-top: 150px;//ALTURA DEL HEADER, HEADER COMO position: fixed
+    //margin-top: 150px;//ALTURA DEL HEADER, HEADER COMO position: fixed
     padding: 1.5rem;
     color: $color-font-dark;
 }
