--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -33,26 +33,38 @@
    &__img{
       width: 100%;
       height: 100%;
-      object-fit: cover
+      object-fit:cover;
+      overflow:hidden;
    }
 
    &__img:hover{
-
-      transform: rotate(-3deg) scale(1.2);
       box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
       transition: all 0.3s ease-out;
+     -webkit-transform:scale(1.3);transform:scale(1.3);
+      overflow:visible;
    }
 
    &__body{
       padding: 1rem;
+      margin-bottom: 1rem;
    }
    &__title{
-      font-weight: 500;
-      font-size: 1.5rem;
+      font-weight: 400;
+      font-size: 1.2rem;
       border-bottom: 2px solid $color-font-dark;
+      height: 3.6rem;
    }
    &__description{
       padding: 1rem 0;
+      font-size:.8rem;
+      margin-bottom: 1rem;
+      height: 6rem;
+      color: $color-font-dark;
+      overflow:hidden;
+   }
+   &__description:hover{
+      overflow-x:hidden;
+      overflow-y:auto;
    }
 
    &__footer{
@@ -62,11 +74,18 @@
    }
 
    &__price{
-      text-align: center;
+/*       text-align: center;
       font-weight: 500;
       font-size: 1.5rem;
       margin-top: -2.5rem;
       margin-bottom: 1.3rem;
+      color: $color-bg-primary; */
+
+      text-align: center;
+      font-weight: 500;
+      font-size: 1.5rem;
+      margin-top: 1rem;
+      margin-bottom: -4.5rem;
       color: $color-bg-primary;
 
    }
@@ -81,15 +100,16 @@
    //----------------------
    &__btn-cart{
       position: relative;
-      left: -4.8rem;
+      right: -4.8rem;
 
       color: $color-font-ligth;
       background-color: $color-bg-primary;
       padding: 1rem;
-      border-radius: 0px 10px 10px 0px;
+      border-radius: 10px 0px 0px 10px;
+      margin-bottom: .8rem;
    }
    &__btn-cart:hover{
-      left: 0rem;
+      right: 0rem;
       transition: all 0.3s ease-out;
       background-color: $color-font-dark;
    }
@@ -97,22 +117,36 @@
 
    &__btn{
       position: relative;
-      left: +4.5rem;
+      right: +4.5rem;
 
       color: $color-font-ligth;
       background-color: $color-bg-primary;
       padding: +1rem;
-      border-radius: 10px 0px 0px 10px;
+      border-radius: 0px 10px 10px 0px;
    }
 
    &__btn:hover{
-      left: 0rem;
+      right: 0rem;
       transition: all 0.3s ease-out;
       background-color: $color-font-dark;
    }
 
    &__date{
-      visibility: hidden;
+      /* visibility: hidden; */
+      /* background-color: $color-bg-date;
+      color: $color-font-ligth;
+      text-align: center;
+      font-weight: bold;
+      font-size: .8rem;
+      padding: .2rem; */
+
+      //background-color: $color-bg-date;
+      color: $color-font-ligth2;
+      text-align: right;
+      font-weight: bold;
+      font-size: .8rem;
+      padding: .2rem;
+
    }
 }
 
