--- a/css/main.css
+++ b/css/main.css
@@ -594,4 +594,82 @@ iframe {
   .main-contact__form {
     width: 100%;
   }
+}
+/* TITULO -*********************************************/
+.title {
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  border-bottom: 2px solid rgb(139, 165, 139);
+  font-weight: 100;
+  color: rgb(85, 97, 85);
+  padding: 0.5rem;
+}
+
+/* FIN TITULO -*****************************************/
+.section {
+  display: flex;
+  justify-content: center;
+}
+
+/* FORMULARIO -*****************************************/
+.form-container {
+  margin-top: 1.5rem;
+  padding: 1.5rem;
+  background-color: rgb(139, 165, 139);
+  font-family: Arial, Helvetica, sans-serif;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  width: 60vh;
+  border-radius: 5px;
+}
+
+.form-container-item {
+  display: block;
+  width: 100%;
+  color: rgb(255, 255, 255);
+  margin-bottom: 1rem;
+}
+
+.input-form-register {
+  width: 100%;
+  padding: 8px;
+  border-radius: 3px;
+  border: none;
+}
+
+.born-country-container__country {
+  width: 100%;
+  padding: 5px;
+  margin-bottom: 1rem;
+}
+
+.sex-container, .therms-container {
+  padding: 1rem;
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgb(255, 255, 255);
+}
+
+.therms-container {
+  margin-bottom: 1rem;
+}
+
+.therms-container__label {
+  margin-left: 0.5rem;
+}
+
+.sex-container__label {
+  padding: 0.5rem;
+}
+
+.register__button {
+  padding: 0.5rem 0.9rem 0.5rem 0.9rem;
+  background-color: rgb(85, 97, 85);
+  color: rgb(255, 255, 255);
+  border: none;
+  border-radius: 4px;
+}
+
+@media only screen and (max-width: 600px) {
+  .form-container {
+    width: 90vh;
+  }
 }/*# sourceMappingURL=main.css.map */
