--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,9 +21,12 @@
 
 @import 'pages/home';
 @import 'pages/contact';
+@import 'pages/register';
 
 @import 'themes/theme';
 @import 'themes/admin';
+
+
 
 
 
