--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,9 @@ html {
 
 body {
   font-family: "Inter", Arial, sans-serif;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
@@ -234,6 +237,13 @@ body {
   color: rgb(27, 26, 26);
 }
 
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .card {
   margin: 1rem;
   border: 0px solid rgb(27, 26, 26);
@@ -305,11 +315,11 @@ body {
 }
 .card__price {
   /*       text-align: center;
-        font-weight: 500;
-        font-size: 1.5rem;
-        margin-top: -2.5rem;
-        margin-bottom: 1.3rem;
-        color: $color-bg-primary; */
+  font-weight: 500;
+  font-size: 1.5rem;
+  margin-top: -2.5rem;
+  margin-bottom: 1.3rem;
+  color: $color-bg-primary; */
   text-align: center;
   font-weight: 500;
   font-size: 1.5rem;
@@ -372,7 +382,8 @@ body {
   color: rgb(199, 194, 194);
 }
 
-.fa-cart-shopping, .fa-circle-info {
+.fa-cart-shopping,
+.fa-circle-info {
   padding-left: 8px;
   padding-right: 8px;
 }
@@ -518,10 +529,10 @@ html {
 .main-contact {
   display: flex;
   flex-direction: row;
-  min-height: 100%;
   padding-left: 3rem;
   padding-right: 3rem;
   margin-bottom: 3rem;
+  height: 50vh;
 }
 .main-contact__map {
   width: 50%;
@@ -547,11 +558,18 @@ html {
   margin-left: 0.3rem;
 }
 
-.contact-h1 {
-  font-size: 1.5rem;
+.titulo-h1 {
+  /*     font-size: 1.5rem;
+      border-bottom: 2px solid $color-bg-primary;
+      margin-bottom: .8rem;
+      display: block; */
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
   border-bottom: 2px solid rgb(139, 165, 139);
+  font-weight: 100;
+  color: rgb(85, 97, 85);
+  text-transform: uppercase;
   margin-bottom: 0.8rem;
-  display: block;
 }
 
 .field-container__label {
@@ -567,9 +585,6 @@ html {
   border: none;
   outline: 2px ridge rgb(139, 165, 139);
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-}
-.field-container__area {
-  height: 6rem;
 }
 .field-container__btn {
   padding: 5px;
@@ -595,25 +610,12 @@ iframe {
     width: 100%;
   }
 }
-/* TITULO -*********************************************/
-.title {
-  font-family: Arial, Helvetica, sans-serif;
-  text-align: center;
-  border-bottom: 2px solid rgb(139, 165, 139);
-  font-weight: 100;
-  color: rgb(85, 97, 85);
-  padding: 0.5rem;
-}
-
-/* FIN TITULO -*****************************************/
 .section {
   display: flex;
   justify-content: center;
 }
 
-/* FORMULARIO -*****************************************/
 .form-container {
-  margin-top: 1.5rem;
   padding: 1.5rem;
   background-color: rgb(139, 165, 139);
   font-family: Arial, Helvetica, sans-serif;
@@ -621,8 +623,7 @@ iframe {
   width: 60vh;
   border-radius: 5px;
 }
-
-.form-container-item {
+.form-container__item {
   display: block;
   width: 100%;
   color: rgb(255, 255, 255);
@@ -642,22 +643,23 @@ iframe {
   margin-bottom: 1rem;
 }
 
-.sex-container, .therms-container {
+.sex-container {
   padding: 1rem;
   font-family: Arial, Helvetica, sans-serif;
   color: rgb(255, 255, 255);
 }
-
-.therms-container {
-  margin-bottom: 1rem;
-}
-
-.therms-container__label {
-  margin-left: 0.5rem;
-}
-
 .sex-container__label {
   padding: 0.5rem;
+}
+
+.therms-container {
+  padding: 1rem;
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgb(255, 255, 255);
+  margin-bottom: 1rem;
+}
+.therms-container__label {
+  margin-left: 0.5rem;
 }
 
 .register__button {
