--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -2,4 +2,9 @@
 
 body{
     font-family: 'Inter',Arial, sans-serif;
+
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+
 }
