--- a/sass/pages/_contact.scss
+++ b/sass/pages/_contact.scss
@@ -1,11 +1,10 @@
 .main-contact {
     display: flex;
     flex-direction: row;
-    min-height: 100%;
     padding-left: 3rem ;
     padding-right: 3rem ;
-
     margin-bottom: 3rem;
+    height: 50vh;
 
     &__map {
         width: 50%;
@@ -33,11 +32,22 @@
     }
 }
 
-.contact-h1 {
-    font-size: 1.5rem;
+.titulo-h1 {
+/*     font-size: 1.5rem;
     border-bottom: 2px solid $color-bg-primary;
     margin-bottom: .8rem;
-    display: block;
+    display: block; */
+
+
+        font-family: Arial, Helvetica, sans-serif;
+        text-align: center;
+        border-bottom: 2px solid $color-bg-primary;
+        font-weight: 100;
+        color: $color-bg-secondary;
+        text-transform:uppercase;
+
+        margin-bottom: .8rem;
+
 }
 
 
@@ -61,9 +71,7 @@
         box-shadow: $shadow0;
     }
 
-    &__area {
-        height: 6rem;
-    }
+
 
     &__btn {
         padding: 5px;
