--- a/sass/pages/_register.scss
+++ b/sass/pages/_register.scss
@@ -1,27 +1,13 @@
 
 
-
-/* TITULO -*********************************************/
-.title{
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
-    border-bottom: 2px solid $color-bg-primary;
-    font-weight: 100;
-    color: $color-bg-secondary;
-    padding: .5rem;
-}
-/* FIN TITULO -*****************************************/
-
-
 .section{
     display: flex;
     justify-content: center;
 }
 
-/* FORMULARIO -*****************************************/
 
 .form-container{
-    margin-top: 1.5rem;
+
     padding: 1.5rem;
     background-color: $color-bg-primary;
     font-family: Arial, Helvetica, sans-serif;
@@ -30,14 +16,14 @@
     box-shadow: $shadow0;
     width: 60vh;
     border-radius: 5px;
+    &__item{
+        display: block;
+        width: 100%;
+        color: $color-background;
+        margin-bottom: 1rem;
+    }
 }
 
-.form-container-item{
-    display: block;
-    width: 100%;
-    color: $color-background;
-    margin-bottom: 1rem;
-}
 
 .input-form-register {
     width: 100%;
@@ -52,23 +38,27 @@
     margin-bottom: 1rem;
 }
 
-.sex-container, .therms-container{
+.sex-container{
     padding: 1rem;
     font-family: Arial, Helvetica, sans-serif;
     color: $color-background;
+
+    &__label{
+        padding: 0.5rem;
+    }
 }
 
 .therms-container{
+    padding: 1rem;
+    font-family: Arial, Helvetica, sans-serif;
+    color: $color-background;
     margin-bottom: 1rem;
+
+    &__label{
+        margin-left: 0.5rem;
+    }
 }
 
-.therms-container__label{
-    margin-left: 0.5rem;
-}
-
-.sex-container__label{
-padding: .5rem;
-}
 
 .register__button{
     padding: .5rem .9rem .5rem .9rem;
@@ -84,4 +74,4 @@ padding: .5rem;
     .form-container{
         width: 90vh;
     }
-  }
+}
